# evarobot

./: README.md
evarobot_description/: CMakeLists.txt  package.xml
evarobot_description/include/plugins/: im_gazebo_ros_sonar.h
evarobot_description/launch/: demo.launch  empty_world.launch~  evarobot.launch  evarobot.launch~
evarobot_description/media/: evarobot.rviz
evarobot_description/meshes/: bumper.stl  caster.stl  wheel.stl
evarobot_description/src/: im_gazebo_ros_sonar.cpp
evarobot_description/urdf/: evarobot.gv  evarobot.urdf
evarobot_description/worlds/: UPlat.sdf
im_msgs/: CMakeLists.txt  package.xml
im_msgs/msg/: Bumper.msg~
